fixed dark mode buttons

--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ th, td {
     background-color: #795548;
 }
 
+.card-purple {
+    background-color: #9b59b6;
+}
+
 .card h2 {
     margin-top: 0;
 }
